--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "@types/express": "^5.0.3",
     "@types/node": "^24.3.1",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "mongodb": "^6.19.0",
+    "mongoose": "^8.18.1",
     "typescript": "^5.9.2"
   }
 }
