--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^24.3.1",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.1",
     "typescript": "^5.9.2"
