--- a/config.json
+++ b/config.json
@@ -1,21 +1,36 @@
 {
   "heroes":[
     {
-      "heroName":"Brightsteel",
-      "type":"swordsman",
-      "maxSlotsAvailable":4,
-      "levels":[
+      "heroId": "Brightsteel",
+      "type": "Swordsman",
+      "maxSlotsAvailable": 4,
+      "cost": 0,
+      "levels": [
         {
-          "level":1,
-          "damage":11,
-          "range":1
+          "level": 1,
+          "damage": 10,
+          "range": 1
         }
       ]
     },
     {
-      "heroName": "Moonveil Ranger",
-      "type": "archer",
+      "heroId": "Ravager of Axeborn",
+      "type": "Barbarian",
+      "maxSlotsAvailable": 3,
+      "cost": 0,
+      "levels": [
+        {
+          "level": 1,
+          "damage": 7,
+          "range": 1
+        }
+      ]
+    },
+    {
+      "heroId": "Moonveil Ranger",
+      "type": "Archer",
       "maxSlotsAvailable": 2,
+      "cost": 0,
       "levels": [
         {
           "level": 1,
@@ -24,27 +39,94 @@
         }
       ]
     },
-     {
-      "heroName": "Light Bearer",
-      "type": "healer",
-      "maxSlotsAvailable": 1,
+    {
+      "heroId": "Ironclad Gladiator",
+      "type": "Barbarian",
+      "maxSlotsAvailable": 2,
+      "cost": 0,
       "levels": [
         {
           "level": 1,
-          "damage": 10,
-          "range": 2
+          "damage": 11,
+          "range": 3
         }
       ]
     },
     {
-      "heroName": "Mystic Sage",
-      "type": "mage",
+      "heroId": "Lightbearer",
+      "type": "Healer",
       "maxSlotsAvailable": 1,
+      "cost": 0,
       "levels": [
         {
           "level": 1,
           "damage": 11,
           "range": 2
+        }
+      ]
+    },
+    {
+      "heroId": "Siegebringer",
+      "type": "Epic",
+      "maxSlotsAvailable": 1,
+      "cost": 0,
+      "levels": [
+        {
+          "level": 1,
+          "damage": 11,
+          "range": 1
+        }
+      ]
+    },
+    {
+      "heroId": "Mystic Sage",
+      "type": "Mage",
+      "maxSlotsAvailable": 1,
+      "cost": 0,
+      "levels": [
+        {
+          "level": 1,
+          "damage": 11,
+          "range": 4
+        }
+      ]
+    },
+    {
+      "heroId": "Silent Assassin",
+      "type": "Stealth",
+      "maxSlotsAvailable": 1,
+      "cost": 0,
+      "levels": [
+        {
+          "level": 1,
+          "damage": 14,
+          "range": 1
+        }
+      ]
+    },
+      {
+      "heroId": "Sentinel",
+      "type": "Knight",
+      "maxSlotsAvailable": 1,
+      "cost": 0,
+      "levels": [
+        {
+          "level": 1,
+          "damage": 8,
+          "range": 2
+        }
+      ]
+    },
+    {
+      "heroId": "Necromancer",
+      "type": "Legendary",
+      "maxSlotsAvailable": 1,
+      "cost": 0,
+      "levels": [
+        {
+          "level": 1,
+          "damage": 14,
+          "range": 4
         }
       ]
     }
