--- a/config.json
+++ b/config.json
@@ -159,6 +159,64 @@
       ]
     }
   ],
+  "game_finish_rewards":{
+    "winning_rewards":{
+      "levels":[
+        {
+          "level":1,
+          "xp":10,
+          "gold_coins":100,
+          "levelUp_reward":""
+        },
+        {
+          "level":2,
+          "xp":14,
+          "gold_coins":130,
+          "levelUp_reward":""
+        },
+        {
+          "level":3,
+          "xp":18,
+          "gold_coins":160,
+          "levelUp_reward":""
+        },
+        {
+          "level":4,
+          "xp":22,
+          "gold_coins":190,
+          "levelUp_reward":""
+        },
+        {
+          "level":5,
+          "xp":26,
+          "gold_coins":220,
+          "levelUp_reward":""
+        }
+      ]
+  }
+  },
+  "level_up_xp":[
+    {
+      "level":1,
+      "xp":100
+    },
+    {
+      "level":2,
+      "xp":100
+    },
+    {
+      "level":3,
+      "xp":100
+    },
+    {
+      "level":4,
+      "xp":100
+    },
+    {
+      "level":5,
+      "xp":100
+    }
+  ],
   "start_game_elixir":2,
   "start_game_gold":2
 }
